Verification for Hybrid node pool/Case-13-Limit-egress-using-cidr/Testpods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: win-frontend-testpod
  namespace: development
  labels:
    app: frontend
spec:
  containers:
    - name: win-frontend-testpod
      image: mcr.microsoft.com/windows/servercore:ltsc2022
      args:
        - powershell.exe
        - -Command
        - "Start-Sleep 360000"
      imagePullPolicy: IfNotPresent
  nodeSelector:
    kubernetes.io/os: windows
    kubernetes.azure.com/os-sku: Windows2022
