Verification for Hybrid node pool/Case-13-Limit-egress-using-cidr/Networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-cidr
  namespace: development
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 216.58.221.36/32
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
